# vb

./: .gitmodules  CMakeLists.txt  README.md
samples/: compute.cc  depth.cc  descriptor_buffers.cc  dynamic_rendering.cc  gltf_textures.cc  imageless_framebuffer.cc  index_buffer.cc  push_descriptors.cc  texture.cc  triangle.cc  triangle_buffered.cc
vb/: vb.c  vb.cc  vb.h  vb.hh  vbc.h
